[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://butterfly.tscn" type="PackedScene" id=2]
[ext_resource path="res://heart.tscn" type="PackedScene" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
Butterfly = ExtResource( 2 )
Heart = ExtResource( 3 )

[node name="piti" parent="." instance=ExtResource( 4 )]

[node name="bf_timer" type="Timer" parent="."]
wait_time = 2.25
autostart = true

[node name="heart_timer" type="Timer" parent="."]
wait_time = 0.03
[connection signal="timeout" from="bf_timer" to="." method="_on_bf_timer_timeout"]
[connection signal="timeout" from="heart_timer" to="." method="_on_heart_timer_timeout"]
